--- a/app/src/main/res/layout/activity_reserve_releases.xml
+++ b/app/src/main/res/layout/activity_reserve_releases.xml
@@ -90,6 +90,7 @@
                         android:textSize="@dimen/_11ssp" />
 
                     <View
+                        android:id="@+id/viewV"
                         android:layout_width="@dimen/_1sdp"
                         android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/_6sdp"
@@ -146,6 +147,7 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/tvChangeName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_semibold"
@@ -170,18 +172,151 @@
                             android:layout_marginStart="@dimen/_10sdp"
                             android:layout_marginTop="@dimen/_11sdp"
                             android:layout_marginEnd="@dimen/_10sdp"
-                            android:background="@color/vlight_gray" />
+                            android:background="@color/primary_light_gray" />
 
                         <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rrTransListRV"
+                            android:id="@+id/rvRollingList"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:scrollbars="none"
                             android:nestedScrollingEnabled="false"
                             android:background="@color/white"
-                            android:layout_marginBottom="@dimen/_20sdp">
+                            android:layout_marginBottom="@dimen/_20sdp"
+                            android:visibility="visible">
 
                         </androidx.recyclerview.widget.RecyclerView>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rvManualList"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:scrollbars="none"
+                            android:nestedScrollingEnabled="false"
+                            android:background="@color/white"
+                            android:layout_marginBottom="@dimen/_20sdp"
+                            android:visibility="gone" />
+<!--                        <LinearLayout-->
+<!--                            android:id="@+id/llManualList"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:orientation="vertical"-->
+<!--                            android:visibility="gone">-->
+<!--                            <LinearLayout-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:orientation="horizontal">-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:fontFamily="@font/opensans_regular"-->
+<!--                                    android:text="@string/reason_field"-->
+<!--                                    android:textColor="@color/primary_black"-->
+<!--                                    android:layout_weight="1"-->
+<!--                                    android:textSize="@dimen/_11ssp" />-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="@dimen/_72sdp"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:fontFamily="@font/opensans_bold"-->
+<!--                                    android:text="10,000.00"-->
+<!--                                    android:gravity="end"-->
+<!--                                    android:singleLine="true"-->
+<!--                                    android:textColor="@color/active_green"-->
+<!--                                    android:textSize="@dimen/_12ssp" />-->
+<!--                            </LinearLayout>-->
+
+<!--                            <LinearLayout-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:layout_marginTop="@dimen/_13sdp"-->
+<!--                                android:orientation="horizontal">-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_weight="1"-->
+<!--                                    android:fontFamily="@font/opensans_semibold"-->
+<!--                                    android:text="@string/business_token_account"-->
+<!--                                    android:textColor="@color/xdark_gray"-->
+<!--                                    android:textSize="@dimen/_9ssp" />-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_weight="1"-->
+<!--                                    android:text="06/23/2021 @ 2:20am"-->
+<!--                                    android:fontFamily="@font/opensans_semibold"-->
+<!--                                    android:gravity="end"-->
+<!--                                    android:textColor="@color/xdark_gray"-->
+<!--                                    android:textSize="@dimen/_9ssp" />-->
+<!--                            </LinearLayout>-->
+<!--                            <View-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="1dp"-->
+<!--                                android:layout_gravity="center"-->
+<!--                                android:layout_marginTop="@dimen/_10sdp"-->
+<!--                                android:layout_marginBottom="@dimen/_9sdp"-->
+<!--                                android:background="@color/primary_light_gray" />-->
+<!--                            -->
+<!--                            <LinearLayout-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:orientation="horizontal">-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_marginBottom="@dimen/_11sdp"-->
+<!--                                    android:fontFamily="@font/opensans_regular"-->
+<!--                                    android:text="@string/reason_field_on_the_manual_release_flow"-->
+<!--                                    android:textColor="@color/primary_black"-->
+<!--                                    android:layout_weight="1"-->
+<!--                                    android:textSize="@dimen/_11ssp" />-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="@dimen/_72sdp"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:text="10,000.00"-->
+<!--                                    android:fontFamily="@font/opensans_bold"-->
+<!--                                    android:gravity="end"-->
+<!--                                    android:singleLine="true"-->
+<!--                                    android:textColor="@color/active_green"-->
+<!--                                    android:textSize="@dimen/_12ssp" />-->
+<!--                            </LinearLayout>-->
+
+<!--                            <LinearLayout-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:orientation="horizontal">-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_weight="1"-->
+<!--                                    android:fontFamily="@font/opensans_semibold"-->
+<!--                                    android:text="@string/business_token_account"-->
+<!--                                    android:textColor="@color/xdark_gray"-->
+<!--                                    android:textSize="@dimen/_9ssp" />-->
+
+<!--                                <TextView-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_weight="1"-->
+<!--                                    android:text="06/23/2021 @ 2:20am"-->
+<!--                                    android:fontFamily="@font/opensans_semibold"-->
+<!--                                    android:gravity="end"-->
+<!--                                    android:textColor="@color/xdark_gray"-->
+<!--                                    android:textSize="@dimen/_9ssp" />-->
+<!--                            </LinearLayout>-->
+<!--                            <View-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="1dp"-->
+<!--                                android:layout_gravity="center"-->
+<!--                                android:layout_marginTop="@dimen/_10sdp"-->
+<!--                                android:layout_marginBottom="@dimen/_9sdp"-->
+<!--                                android:background="@color/primary_light_gray" />-->
+
+<!--                        </LinearLayout>-->
 
                     </LinearLayout>
 
