--- a/app/src/main/res/layout/payout_transactions_filter.xml
+++ b/app/src/main/res/layout/payout_transactions_filter.xml
@@ -68,6 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_23sdp"
             android:background="@drawable/bg_small_corners"
+            android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal">
 
