--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -124,26 +124,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/_7sdp"
                 android:layout_marginEnd="@dimen/_15sdp"
+                android:layout_marginBottom="@dimen/_7sdp"
                 android:src="@drawable/ic_custom_tick"
                 app:tint="@color/primary_green" />
         </LinearLayout>
     </LinearLayout>
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
     <ScrollView
-        android:id="@+id/activity_expandable_scroll_view"
         android:layout_width="match_parent"
-        android:fillViewport="true"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_10ssp"
             android:orientation="vertical">
 
@@ -153,118 +148,38 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:divider="@null"
-                android:groupIndicator="@null"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <LinearLayout
-                android:id="@+id/profileLL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:layout_marginTop="@dimen/_10ssp"
-                android:gravity="center"
-                android:visibility="gone"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/profile_account_profile_image"
-                    android:layout_width="@dimen/_35sdp"
-                    android:layout_height="@dimen/_35sdp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/_12sdp"
-                    android:layout_marginTop="@dimen/_10ssp"
-                    android:layout_marginBottom="@dimen/_10ssp"
-                    app:cardBackgroundColor="@color/white"
-                    app:cardCornerRadius="@dimen/_18sdp"
-                    app:layout_constraintStart_toEndOf="@+id/title"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <ImageView
-                        android:id="@+id/profile_img"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:contentDescription="@string/businessProfileAccountItemChildImage"
-                        android:scaleType="fitXY"
-                        android:src="@color/light_gray"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/b_imageTextTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/opensans_bold"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_20sdp"
-                        android:visibility="gone" />
-                </androidx.cardview.widget.CardView>
-
-                <TextView
-                    android:id="@+id/business_personal_account_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_15sdp"
-                    android:layout_marginEnd="@dimen/_10ssp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text=""
-                    android:layout_weight="1"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11sdp" />
-
-                <ImageView
-                    android:id="@+id/tickIcon"
-                    android:visibility="gone"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:src="@drawable/ic_custom_tick"
-                    app:tint="@color/primary_green" />
-
-            </LinearLayout>
+                android:groupIndicator="@null" />
 
             <LinearLayout
                 android:id="@+id/ll_open_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/profileLL"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:background="@color/white"
                 android:orientation="horizontal"
+                android:paddingStart="@dimen/_20sdp"
+                android:paddingTop="@dimen/_11sdp"
+                android:paddingBottom="@dimen/_11sdp"
                 android:visibility="visible">
 
-                <LinearLayout
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_add_circle" />
+
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/_11sdp"
-                    android:layout_marginStart="@dimen/_20sdp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_add_circle" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_15sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:text="Open New Account"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_11sdp" />
-                </LinearLayout>
-
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/_15sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="@string/open_new_account"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11sdp" />
 
             </LinearLayout>
 
         </LinearLayout>
-
     </ScrollView>
-
 </LinearLayout>
