--- a/app/src/main/res/layout/activity_pay_to_merchant.xml
+++ b/app/src/main/res/layout/activity_pay_to_merchant.xml
@@ -136,6 +136,10 @@
 
                 </LinearLayout>
 
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none">
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -282,6 +286,7 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+                </ScrollView>
             </LinearLayout>
 
             <com.greenbox.coyni.utils.keyboards.CustomKeyboard
