--- a/app/src/main/res/layout/dialog_reserve_filter.xml
+++ b/app/src/main/res/layout/dialog_reserve_filter.xml
@@ -162,7 +162,7 @@
                 android:background="@drawable/bg_square_withoutcolor_corners"
                 android:clickable="true"
                 android:editable="false"
-                android:focusable="false"
+                android:focusable="true"
                 android:fontFamily="@font/opensans_semibold"
                 android:hint="@string/date_range"
                 android:textColor="@color/primary_black"
