New changes in batch payout list and history

--- a/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
@@ -418,6 +418,7 @@
                             android:id="@+id/progressBarLoadMore"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:visibility="gone"
                             />
                     </LinearLayout>
                 </androidx.core.widget.NestedScrollView>
