--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -999,15 +999,15 @@
                                             android:textColor="@color/dark_grey"
                                             android:textSize="@dimen/_10ssp" />
 
-                                        <TextView
-                                            android:id="@+id/nxtPayoutTimeTV"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_marginBottom="@dimen/_14sdp"
-                                            android:fontFamily="@font/opensans_regular"
-                                            android:text="@string/time"
-                                            android:textColor="@color/dark_grey"
-                                            android:textSize="@dimen/_10ssp" />
+<!--                                        <TextView-->
+<!--                                            android:id="@+id/nxtPayoutTimeTV"-->
+<!--                                            android:layout_width="wrap_content"-->
+<!--                                            android:layout_height="wrap_content"-->
+<!--                                            android:layout_marginBottom="@dimen/_14sdp"-->
+<!--                                            android:fontFamily="@font/opensans_regular"-->
+<!--                                            android:text="@string/time"-->
+<!--                                            android:textColor="@color/dark_grey"-->
+<!--                                            android:textSize="@dimen/_10ssp" />-->
                                     </LinearLayout>
                                 </LinearLayout>
 
@@ -1055,7 +1055,7 @@
                                     </LinearLayout>
 
                                     <TextView
-                                        android:id="@+id/dasboardPayoutDate"
+                                        android:id="@+id/lastPayoutDate"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="@dimen/_14sdp"
