V2 Customer Bug fix
1. Multiple screens are displaying when user click multiple times on Forgot Pin link. - Fixed

2. Something went popup is displaying when user navigate from verification screen. - Encryption

3. Description alignment is not proper in "Finish the set up your account in less than 5 min". -Fixed

4. Get started text should be in bold as per wireframes in Login screen. - Fixed

5. "c" letter should be small in Coyni word throughout the application. -Fixed

6. After completing registration, In welcome to Coyni text, coyni should be in bold as per wireframes. - Fixed

7. After changing the time zone, Time zone changed successfully toast message should display instead of Preferences successfully updated. - BE
{"status":"SUCCESS","timestamp":"2022-04-05T13:24:30.538+00:00","data":{"userId":2150,"timeZone":0,"localCurrency":0,"preferredAccount":2150,"message":"Preferences successfully updated!"},"error":null}

8. After doing Retrieve email, when user user change email the previous email is auto populating in login screen. -Fixed
Steps to Reproduce:
1. Click on Retrieve Email.
2. Give valid phone number, First name and last name and click on next button.
3. Enter valid code in verify email screen.
4. Click on account which was found.
5. Login with same credentials and change the email from User Details.
6. Previous email is auto populating in login screen.

9. When user click on Next button multiple times in Forgot Your Password screen, multiple verification screens are displaying and when navigate to Forgot your password screen, Something went wrong popup is displaying - Fixed

10. When user scan invalid QR code, screen is strucking. -Fixed

11. Animation should be there for Slide to confirm in Request screen. -Fixed

12. Note message should appear inside double quotes in Request Preview screen. -Fixed

13. Please wait is loading continuously when user open Scan me / Scan QR. -Fixed

--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -125,7 +125,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="Can be used for making Coyni purchases\nor withdrawing funds."
+                        android:text="Can be used for making coyni purchases\nor withdrawing funds."
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_9ssp" />
 
