--- a/app/src/main/res/layout/activity_add_recipient.xml
+++ b/app/src/main/res/layout/activity_add_recipient.xml
@@ -234,7 +234,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="Other people on Coyni"
+                    android:text="Other people on coyni"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp"></TextView>
 
