--- a/app/src/main/res/layout/activity_edit_email.xml
+++ b/app/src/main/res/layout/activity_edit_email.xml
@@ -278,8 +278,8 @@
                     style="@style/TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_32sdp"
                     android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_32sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:hint="Current Email"
                     android:textColorHint="@color/black"
@@ -292,22 +292,22 @@
                         android:id="@+id/currentEmailET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="creditCardSecurityCode"
                         android:clickable="false"
                         android:cursorVisible="false"
-                        android:importantForAutofill="no"
-                        android:focusable="false"
                         android:enabled="false"
+                        android:focusable="false"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
+                        android:importantForAutofill="no"
+                        android:inputType="textVisiblePassword|textNoSuggestions"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
-                        android:inputType="textVisiblePassword|textNoSuggestions"
                         android:singleLine="true"
                         android:textColor="@color/text_color"
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="@dimen/_12ssp"
-                        android:autofillHints="creditCardSecurityCode"/>
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -351,9 +351,9 @@
                     android:id="@+id/b_newEmailErrorLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:gravity="center"
-                    android:layout_marginStart="@dimen/_10sdp"
                     android:orientation="horizontal"
                     android:visibility="gone">
 
