--- a/app/src/main/res/layout/activity_pay_to_personal.xml
+++ b/app/src/main/res/layout/activity_pay_to_personal.xml
@@ -317,7 +317,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Coyni Balance"
+                            android:text="coyni Balance"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp"></TextView>
 
