--- a/app/src/main/res/layout/buy_token_transaction_in_progress.xml
+++ b/app/src/main/res/layout/buy_token_transaction_in_progress.xml
@@ -156,7 +156,7 @@
                 android:paddingLeft="@dimen/_10sdp"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_10sdp" />
-<!--            android:text="We are processing your request, please allow a few \nminutes for your Coyni Debit/Credit card purchase to be "-->
+<!--            android:text="We are processing your request, please allow a few \nminutes for your coyni Debit/Credit card purchase to be "-->
 
             <LinearLayout
                 android:layout_width="match_parent"
