--- a/app/src/main/res/layout/activity_business_additional_action_documents_items.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_documents_items.xml
@@ -19,7 +19,7 @@
             <LinearLayout
                 android:id="@+id/documentRequired"
                 android:layout_width="match_parent"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:padding="@dimen/_10sdp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -42,7 +42,6 @@
                     android:layout_marginBottom="@dimen/_14sdp"
                     android:orientation="horizontal"
                     android:background="@drawable/bg_white_color_light_border"
-                    android:onClick="fileOnClick"
                     android:paddingStart="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
                     android:paddingBottom="@dimen/_14sdp">
@@ -55,9 +54,11 @@
 
                     <TextView
                         android:id="@+id/sscuploadFileTV"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:layout_gravity="center"
+                        android:layout_marginEnd="@dimen/_50sdp"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/upload_file"
@@ -66,16 +67,17 @@
 
                     <LinearLayout
                         android:id="@+id/sscfileUploadedLL"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:visibility="gone">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:orientation="vertical">
 
                             <TextView
@@ -108,6 +110,7 @@
 
                     </LinearLayout>
 
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -125,6 +128,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/websiteCheckBox"
                     android:orientation="horizontal">
 
                     <CheckBox
